--- a/guestbook-ui-deployment.yaml
+++ b/guestbook-ui-deployment.yaml
@@ -31,3 +31,10 @@ spec:
     targetPort: 80
   selector:
     app: guestbook-ui
+
+---
+
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: ns-guestbook-mlu
