--- a/guestbook-ui-deployment.yaml
+++ b/guestbook-ui-deployment.yaml
@@ -20,21 +20,38 @@ spec:
             - containerPort: 80
 
 ---
-
 apiVersion: v1
 kind: Service
 metadata:
   name: guestbook-ui
 spec:
   ports:
-  - port: 80
-    targetPort: 80
+    - port: 80
+      targetPort: 80
   selector:
     app: guestbook-ui
 
 ---
-
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: ns-guestbook-mlu
+  same: ns-guestbook-mlu
+
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: ingress-guestbook-mlu
+spec:
+  ingressClassName: nginx
+  rules:
+    - host: guestbook.mlu.codeandski.ch
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: guestbook-ui
+                port:
+                  number: 80
