--- a/guestbook-ui-deployment.yaml
+++ b/guestbook-ui-deployment.yaml
@@ -35,7 +35,7 @@ spec:
 apiVersion: v1
 kind: Namespace
 metadata:
-  same: ns-guestbook-mlu
+  name: ns-guestbook-mlu
 
 ---
 apiVersion: networking.k8s.io/v1
